--- a/src/compontens/items/item.scss
+++ b/src/compontens/items/item.scss
@@ -69,6 +69,7 @@
         flex-wrap: wrap;
         justify-content: center;
         gap: 20px;
+        margin: 20px;
 
         .card{
             width:23%;
@@ -144,5 +145,31 @@
                }
             }
         }
+    }
+}
+
+.pagination{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .prev,.next{
+        border: 1px solid $white;
+        padding: 5px 10px;
+        margin: 5px;
+        text-transform: capitalize;
+        &:disabled{
+            cursor: not-allowed;
+            border: 1px solid $maincolor;
+            color: $gray;
+        }
+    }
+    span{
+            border: 1px solid $white;
+            padding:5px 10px !important ;
+            margin: 5px;
+            cursor: pointer;
+    }
+    .active{
+        background-color: $crimson;
     }
 }
